<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <EditText
        android:id="@+id/username"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:hint="@string/username" />
    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:checkedButton="@+id/radio_user"
        android:orientation="vertical">
        <RadioButton android:id="@id/radio_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_user"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton android:id="@+id/radio_volunteer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_volunteer"
            android:onClick="onRadioButtonClicked"/>
    </RadioGroup>
    <EditText
        android:id="@+id/phone_number"
        android:inputType="phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:hint="@string/dialog_phone_number" />
    <EditText
        android:id="@+id/birth_year"
        android:inputType="date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:hint="@string/dialog_birth_year" />


    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/radio_gender"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_gender"/>
        <RadioButton android:id="@+id/radio_m"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_male"/>
        <RadioButton android:id="@+id/radio_f"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_female"/>
    </RadioGroup>
</LinearLayout>